--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       delay: 1500,
       action: {
         placeholder : "選択してください",  // 選択前に表示するメッセージ
-        searchselect : false, // Default: true, false for standart dropdown
+        searchselect : true, // Default: true, false for standart dropdown
         label : 'text', // dropdown label variable
         options : [
                       {value: "sousa", text : "セルフサービスポータルの基本操作" },
