--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         case 'operation': caseOperation(); break;
         case 'whichApp': caseWhichApp(); break;
         case 'user': caseUser(); break;
+        case 'others': caseAthers(); break;
       }
     });
 
@@ -106,6 +107,13 @@
           content: '画面右上の「ユーザ」アイコンよりユーザ情報を編集できます。'
         });
       }).then();
+    }
+
+    function caseAthers(){ //「その他」を選択
+      botui.message.add({
+        delay: 1500,
+        content: 'セルフサービスポータルについての問い合わせは「xxxxx」までお願いいたします。'
+      })
     }
 
 
