--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
      * content: 表示するメッセージ
      */
     botui.message.add({
+      photo: 'https://unilmistest20210810.github.io/test20210810/robot.png',
       content: 'こんにちは！'
     }).then(showQuestions);
     
