--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       }).then(function() {
         return botui.message.add({
           delay: 1000,
-          content: 'SSPのマニュアルは<br/><a href="https://lmisoc.com/lmisoc/" target="_blank" rel="noopener noreferrer">こちら</a>を参照してください。'
+          content: 'SSPのマニュアルは<br/><a href="https://lmisoc.com/lmisoc/manual/ssp/2406448.html" target="_blank" rel="noopener noreferrer">こちら</a>を参照してください。'
         });
       }).then(askEnd);
     }
@@ -131,7 +131,7 @@
     function caseApp(){
       botui.message.add({
         delay: 1000,
-        content: 'こちらは申請タブから登録をお願いします。'
+        content: 'こちらは申請タブから登録をお願いします。<br>申請フォームは<a href="https://taka0507-unirita-support2021.cs6.force.com/smoc__ox_page_siterequestcreate?cid=%25E6%25A8%2599%25E6%25BA%2596&classid=&rid=" target="_blank" rel="noopener noreferrer">こちら</a>です。'
       }).then(askEnd);
     }
 
@@ -142,7 +142,7 @@
     function caseInquiry(){
       botui.message.add({
         delay: 1000,
-        content: 'こちらはお問い合わせタブから登録をお願いします。'
+        content: 'こちらはお問い合わせフォームから登録をお願いします。<br>お問い合わせフォームは<a href="https://taka0507-unirita-support2021.cs6.force.com/smoc__ox_page_siteincidentcreate?cid=%25E6%25A8%2599%25E6%25BA%2596&classid=&rid=" target="_blank" rel="noopener noreferrer">こちら</a>です。'
       }).then(askEnd);
     }
 
@@ -157,7 +157,7 @@
       }).then(function() {
         return botui.message.add({
           delay: 1000,
-          content: '画面右上の「ユーザ」アイコンよりユーザ情報を編集できます。'
+          content: '画面右上の「ユーザ」アイコンよりユーザ情報を編集できます。<br>ユーザ情報画面は<a href="https://taka0507-unirita-support2021.cs6.force.com/smoc__ox_page_siteuserinfo" target="_blank" rel="noopener noreferrer">こちら</a>です。'
         });
       }).then(askEnd);
     }
